--- a/styles/style.css
+++ b/styles/style.css
@@ -81,15 +81,15 @@
   gap: 24px;
 }
 #card-container .card-holder .card .tag {
-  padding: 14px 32px;
   border-radius: 8px;
-  background: rgba(82, 195, 3, 0.15);
   margin: 32px 0 24px 0;
 }
-#card-container .card-holder .card .tag p {
+#card-container .card-holder .card .tag span {
   color: #101010;
   font-size: 24px;
   font-weight: 600;
+  background: rgba(82, 195, 3, 0.15);
+  padding: 14px 32px;
 }
 #card-container .card-holder .card h3 {
   color: #101010;
@@ -111,4 +111,56 @@
   font-size: 20px;
   font-weight: 600;
   margin-top: 64px;
+}
+
+/* Social section */
+#social {
+  width: 100%;
+}
+#social .social-content {
+  display: flex;
+  align-items: center;
+}
+#social .social-content .left {
+  width: 50%;
+}
+#social .social-content .left img {
+  width: 100%;
+}
+#social .social-content .right {
+  width: 50%;
+  text-align: center;
+}
+#social .social-content .right h2 {
+  width: 805px;
+  color: #101010;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 64px;
+  margin: 0 auto 24px;
+}
+#social .social-content .right > p {
+  color: #101010;
+  font-size: 24px;
+  font-weight: 500;
+  opacity: 0.6;
+  margin-bottom: 48px;
+}
+#social .social-content .right > .social-tag {
+  padding: 30px 0;
+  border-top: 1px solid rgba(16, 16, 16, 0.2);
+  border-bottom: 1px solid rgba(16, 16, 16, 0.2);
+  color: #101010;
+  font-size: 32px;
+  font-weight: 600;
+  opacity: 0.7;
+}
+.social-content .right .social-links {
+  display: flex;
+  justify-content: center;
+  gap: 32px;
+  margin: 0 auto;
+  list-style: none;
+  text-decoration: none;
+  margin-top: 32px;
 }
