--- a/styles/style.css
+++ b/styles/style.css
@@ -49,6 +49,7 @@
   color: #fff;
   font-size: 20px;
   font-weight: 600;
+  cursor: pointer;
 }
 
 /* Card container */
@@ -111,6 +112,7 @@
   font-size: 20px;
   font-weight: 600;
   margin-top: 64px;
+  cursor: pointer;
 }
 
 /* Social section */
@@ -163,4 +165,47 @@
   list-style: none;
   text-decoration: none;
   margin-top: 32px;
+}
+
+/* Single card section */
+#single-card {
+  padding: 124px 0;
+}
+#single-card .card {
+  width: 424px;
+  text-align: center;
+  margin: 0 auto;
+}
+#single-card .card .tag {
+  border-radius: 8px;
+  margin: 32px 0 24px 0;
+}
+#single-card .card .tag span {
+  color: #101010;
+  font-size: 24px;
+  font-weight: 600;
+  background: rgba(82, 195, 3, 0.15);
+  padding: 14px 32px;
+}
+#single-card .card h3 {
+  color: #101010;
+  font-size: 40px;
+  font-weight: 600;
+  margin-bottom: 24px;
+}
+#single-card .card .card-description {
+  color: #101010;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 28px;
+}
+#single-card button {
+  border-radius: 8px;
+  background: #52c303;
+  padding: 21px 32px;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 64px;
+  cursor: pointer;
 }
